--- a/templates/inventory/reports/select_report.html
+++ b/templates/inventory/reports/select_report.html
@@ -10,7 +10,7 @@
                         <i class="fas fa-chart-line fa-3x text-primary"></i>
                     </div>
                     <div>
-                        <h5 class="card-title">Global Report</h5>
+                        <h5 class="card-title">Report Inventario</h5>
                         <p class="card-text">Visualizza i dati aggregati globali dell'inventario.</p>
                         <a href="{% url 'inventory:global_report' %}" class="btn btn-outline-dark mt-auto">
                             Seleziona Opzioni
@@ -28,7 +28,7 @@
                         <i class="fas fa-boxes fa-3x text-success"></i>
                     </div>
                     <div>
-                        <h5 class="card-title">Product Report</h5>
+                        <h5 class="card-title">Report Prodotti</h5>
                         <p class="card-text">Visualizza i dati aggregati per prodotto.</p>
                         <a href="{% url 'inventory:product_report' %}" class="btn btn-outline-dark mt-auto">
                             Seleziona Opzioni
@@ -46,7 +46,7 @@
                         <i class="fas fa-check-circle fa-3x text-warning"></i>
                     </div>
                     <div>
-                        <h5 class="card-title">Data Quality Report</h5>
+                        <h5 class="card-title">Report Qualità dei Dati</h5>
                         <p class="card-text">Monitora la qualità dei dati relativi all'inventario.</p>
                         <a href="{% url 'inventory:data_quality_report' %}" class="btn btn-outline-dark mt-auto">
                             Seleziona Opzioni
@@ -64,7 +64,7 @@
                         <i class="fas fa-shopping-cart fa-3x text-info"></i>
                     </div>
                     <div>
-                        <h5 class="card-title">Sales Report</h5>
+                        <h5 class="card-title">Report Vendite</h5>
                         <p class="card-text">Analizza le vendite.</p>
                         <a href="{% url 'inventory:sales_report' %}" class="btn btn-outline-dark mt-auto">
                             Seleziona Opzioni
@@ -82,7 +82,7 @@
                         <i class="fas fa-truck fa-3x text-danger"></i>
                     </div>
                     <div>
-                        <h5 class="card-title">Orders Report</h5>
+                        <h5 class="card-title">Report Ordini</h5>
                         <p class="card-text">Consulta le statistiche sugli ordini.</p>
                         <a href="{% url 'inventory:orders_report' %}" class="btn btn-outline-dark mt-auto">
                             Seleziona Opzioni
