--- a/templates/warehouse/product_list.html
+++ b/templates/warehouse/product_list.html
@@ -62,9 +62,13 @@
                             <a href="{% url 'warehouse:product_detail' product.id %}" class="btn btn-outline-dark btn-sm">
                                 <i class="fas fa-info-circle"></i>
                             </a>
-                            <button type="submit" name="delete_object" class="btn btn-sm btn-outline-danger" onclick="return confirm('Sei sicuro di voler eliminare?');">
-                                <i class="fas fa-trash-alt"></i>
-                            </button>
+                            <form method="post" class="d-inline" onsubmit="return confirm('Sei sicuro di voler eliminare?');">
+                                {% csrf_token %}
+                                <input type="hidden" name="delete_object" value="{{ product.id }}">
+                                <button type="submit" class="btn btn-sm btn-outline-danger">
+                                    <i class="fas fa-trash-alt"></i>
+                                </button>
+                            </form>
                         </td>
                     </tr>
                 {% empty %}
