modified product aliases, added inventory uploader

--- a/templates/warehouse/navigation/card.html
+++ b/templates/warehouse/navigation/card.html
@@ -18,6 +18,7 @@
                                 <ul class="list-unstyled">
                                     <li><a href="{% url 'warehouse:product_list' %}" class="btn btn-outline-dark my-1 w-100 text-start"><i class="fas fa-cubes me-2"></i> Prodotti</a></li>
                                     <li><a href="{% url 'warehouse:category_list' %}" class="btn btn-outline-dark my-1 w-100 text-start"><i class="fas fa-tags me-2"></i> Categorie</a></li>
+                                    <li><a href="{% url 'warehouse:inventory_upload' %}" class="btn btn-outline-dark my-1 w-100 text-start"><i class="fas fa-upload me-2"></i> Carica Snapshot</a></li>
                                 </ul>
                             </div>
                         </div>
